# orderbook_trial_task

./: Cargo.toml  Dockerfile  README.md
frontend/svelte-client/: package.json  pnpm-lock.yaml
frontend/svelte-client/src/: App.svelte  main.ts
frontend/svelte-client/src/lib/: OrderBookAverage.svelte
src/: lib.rs  main.rs  typespec.rs
src/adapters/: binance_market_stream.rs  client_web_server.rs  mod.rs
src/application/: mod.rs
src/core/: mod.rs
src/ports/: client_web_server.rs  market_stream.rs  mod.rs
