[package]
name = "orderbook_trial_task"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook_trial_task"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
binance_spot_connector_rust = { version = "1.2.1", features = ["enable-tokio-tungstenite"] }
futures-util = { version = "0.3.31", features = ["tokio-io"] }
poem = { version = "3.1.1", features = ["static-files", "websocket"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.24.0"
